# kine

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
ai_flow/: __init__.py  core.py  errors.py
ai_flow/providers/: __init__.py  gemini.py
ai_flow/schemas/: requests.py  responses.py
docs/: ARCHITECTURE.md  CONTEXT_SUMMARY.md  KINE_SPEC.md  QUICKSTART.md  ai_flow_spec.md
examples/: check_gemini.py  test_gemini.py  test_ollama.py
scripts/: generate_changelog.py
src/kine/: __init__.py  core.py  errors.py  protocols.py
src/kine/providers/: __init__.py  deepseek.py  gemini.py  huggingface.py  ollama.py  openai.py
src/kine/schemas/: requests.py  responses.py
src/kine/utils/: cache.py  logger.py  safety.py
tests/unit/test_providers/: test_gemini.py
