[tool.poetry]
name = "kine"
version = "0.1.0"
description = "Integrate AI models (Gemini, DeepSeek, OpenAI, HuggingFace, etc.) with one line of code"
authors = ["Pedro Alexander Martinez Arthur <pama205@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Pama205/kine.git"
packages = [{include = "kine", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Core runtime dependencies (must remain ultralight)
pydantic = "^2.5"
python-dotenv = "^1.0.0"

# Provider SDKs — install only the ones you need via extras
openai = { version = "^1.0", optional = true }
google-generativeai = { version = "^0.3.0", optional = true, markers = "python_version >= '3.9'" }
huggingface-hub = { version = "^0.20.0", optional = true }

# Async HTTP client used by REST-based adapters
httpx = { version = ">=0.25,<0.28", optional = true }

[tool.poetry.extras]
gemini = ["google-generativeai"]
openai = ["openai", "httpx"]
huggingface = ["huggingface-hub", "httpx"]
ollama = ["httpx"]
all = ["google-generativeai", "openai", "huggingface-hub", "httpx"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.8.0"
black = "^24.1.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
git-changelog = "^2.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["kine"]

[tool.git-changelog]
output = "CHANGELOG.md"
template = "keepachangelog"
remote = "origin"
branch = "main"
parse_refs = false
types = ["feat", "fix", "perf", "refactor"]
sections = [
    { name = "feat", title = "🚀 Nuevas Funcionalidades" },
    { name = "fix", title = "🐛 Correcciones" },
    { name = "perf", title = "⚡ Mejoras de Rendimiento" },
    { name = "refactor", title = "♻️ Refactorizaciones" }
]

[tool.poetry.scripts]
changelog = "scripts.generate_changelog:generate_changelog"
